--- a/package.json
+++ b/package.json
@@ -65,5 +65,8 @@
     "sass-loader": "^8.0.0",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.2"
+  },
+  "dependencies": {
+    "fontsource-metropolis": "^3.0.1"
   }
 }
